assets/css/style.css
  @import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:wght@800;900&family=Hind+Madurai:wght@300;400;500;600;700&family=Raleway:ital,wght@0,700;0,800;1,700;1,800&display=swap');

  body {
    font-family: 'Hind Madurai', sans-serif;
    margin: 0;
  }

/*navbar*/

  .navbar-brand {
    font-family: 'Alegreya Sans SC', sans-serif;
  }

  .navbar {
    background-color: #F1FAEE;
  }

  /*hero carousel*/

  .carousel img {
    height: auto;
    width: 100%;
    overflow: hidden;
    position: relative;
  }
  
 /*footer*/
  
  footer {
  height: 150px;
  background-color: #F1FAEE;
  }
 
 .footer-about {
    font-size: 150%;
    font-family: 'Alegreya Sans SC', sans-serif;
    text-align: left;
    margin: 13% auto;
    padding: 5%;
    color: #000;
  }

  .social-networks {
    text-align: center;
  }
  
  .social-networks li {
    display: inline;
  }
  .social-networks i {
    font-size: 150%;
    margin: 13% auto;
    padding: 5%;
    color: #FF715B;
  }

